crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_capture_config_120x40.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                                                                                     "
"╭ Events [*] ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│#     Time^           Source                      Destination                 Protocol    Dir  Summary                │"
"│    1 00:00:01.000    10.0.0.1:1234               10.0.0.2:5678               gRPC        ←                           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                        ┌ Live Capture Configuration ────────────────────────────────────────┐                        │"
"│                        │Select network interface and configure capture settings             │                        │"
"│                        │┌ Network Interfaces ──────────────────────────────────────────────┐│                        │"
"│                        ││ > ap1  UP                                                        ││                        │"
"│                        ││   en0  UP  fe80::884:b94e:a51c:58f8, 192.168.50.148              ││                        │"
"│                        ││   awdl0  UP  fe80::54f8:d2ff:feaf:9525                           ││                        │"
"│                        ││   llw0  UP  fe80::54f8:d2ff:feaf:9525                            ││                        │"
"│                        ││   utun0  UP  fe80::494e:e43f:6ca5:20ad                           ││                        │"
"│                        ││   utun1  UP  fe80::3b80:cb78:1928:fa7d                           ││                        │"
"│                        ││   utun2  UP  fe80::18ed:a435:d36b:10d5                           ││                        │"
"│                        ││   utun3  UP  fe80::ce81:b1c:bd2c:69e                             ││                        │"
"╰────────────────────────││   utun4  UP  fe80::38f4:c96d:a304:f0f2                           ││────────────────────────╯"
"┌ Decode ────────────────│└──────────────────────────────────────────────────────────────────┘│────────────────────────┐"
"│  Timestamp: 00:00:01.00│┌ BPF Filter ──────────────────────────────────────────────────────┐│              Hello gRPC│"
"│  Direction: inbound    ││(no filter - capture all traffic)                                 ││                        │"
"│▶ Source                │└──────────────────────────────────────────────────────────────────┘│                        │"
"│  Transport: gRPC       │┌ Capture Settings ────────────────────────────────────────────────┐│                        │"
"│▶ Payload (10 bytes)    ││Snaplen: 65535 bytes                                              ││                        │"
"│                        │└Promiscuous mode: ON (Space to toggle)────────────────────────────┘│                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │                                                                    │                        │"
"│                        │↑↓: navigate  Tab: next field  Enter: start  Esc/q: cancel          │                        │"
"│                        │                                                                    │                        │"
"│                        └────────────────────────────────────────────────────────────────────┘                        │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│gRPC                                                                                                                  │"
"│█                                                                                                                     │"
"│ 00:00:01.000 --- 00:00:01.000  gRPC: 1                                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 1 events │ gRPC: 1                                                 Tab:pane  j/k:nav  s:sort  /:filter  ?:help  q:quit "
