crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_command_palette_120x40.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                                                                                     "
"╭ Events [*] ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│#     Time^           Source                      Destination                 Protocol    Dir  Summary                │"
"│    1 00:00:01.000    10.0.0.1:1234               10.0.0.2:5678               gRPC        ←                           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                  ┌ Command Palette ───────────────────────────────┐                                  │"
"│                                  │: ▏                                             │                                  │"
"│                                  │                                                │                                  │"
"│                                  │ Filter events        /                         │                                  │"
"│                                  │ Clear filter         Esc                       │                                  │"
"│                                  │ Help                 ?                         │                                  │"
"╰──────────────────────────────────│ Next pane            Tab                       │──────────────────────────────────╯"
"┌ Decode ──────────────────────────│ Previous pane        Shift+Tab                 │──────────────────────────────────┐"
"│  Timestamp: 00:00:01.000         │ First event          g                         │0 43                    Hello gRPC│"
"│  Direction: inbound              │ Last event           G                         │                                  │"
"│▶ Source                          │ Reload config        :reload                   │                                  │"
"│  Transport: gRPC                 │ Quit                 q                         │                                  │"
"│▶ Payload (10 bytes)              │                                                │                                  │"
"│                                  │                                                │                                  │"
"│                                  └────────────────────────────────────────────────┘                                  │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│gRPC                                                                                                                  │"
"│█                                                                                                                     │"
"│ 00:00:01.000 --- 00:00:01.000  gRPC: 1                                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 1 events │ gRPC: 1                                                 Tab:pane  j/k:nav  s:sort  /:filter  ?:help  q:quit "
