crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_decode_tree_focused_80x24.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
expression: backend
---
" / type / to filter                                                             "
"┌ Events ──────────────────────────────────────────────────────────────────────┐"
"│#     Time^           Source            Destination       Protocol    Dir  ...│"
"│    1 00:00:01.000    10.0.0.1:1234     10.0.0.2:5678     gRPC        ←       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"╭ Decode [*] ──────────────────╮┌ Hex Dump ────────────────────────────────────┐"
"│  Timestamp: 00:00:01.000     ││00000000  48 65 6c 6c 6f 20 67 52  50 43      │"
"│  Direction: inbound          ││                                              │"
"│▶ Source                      ││                                              │"
"│  Transport: gRPC             ││                                              │"
"│▶ Payload (10 bytes)          ││                                              │"
"│                              ││                                              │"
"╰──────────────────────────────╯└──────────────────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────────────────────────┐"
"│gRPC                                                                          │"
"│█                                                                             │"
"│ 00:00:01.000 --- 00:00:01.000  gRPC: 1                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" 1 events │ gRPC: 1  Tab:pane  j/k:nav  Enter:expand  Space:toggle  ?:help  q:qu"
