crates/prb-tui/tests/snapshots/tui_snapshots__snapshot_empty_store_80x24.snap
---
source: crates/prb-tui/tests/tui_snapshots.rs
assertion_line: 80
expression: backend
---
" / type / to filter                                                             "
"╭ Events [*] ──────────────────────────────────────────────────────────────────╮"
"│#     Time^        Origin              Protocol   Dir Summary                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"┌ Decode ──────────────────────┐┌ Hex Dump ────────────────────────────────────┐"
"│  No event selected           ││  No event selected                           │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ Timeline ────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" 0 events │                 Tab:pane  j/k:nav  s:sort  /:filter  ?:help  q:quit "
